[package]
name = "udp-midilan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
midir = "0.9.1"
tokio = { version = "1.33.0", features = ["net", "macros", "rt", "sync", "time"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
codegen-units = 1
